--- a/train_fasttext.ipynb
+++ b/train_fasttext.ipynb
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "db75d116",
+   "id": "76cb7e08",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f38143c0",
+   "id": "8db690a5",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5e08226f",
+   "id": "d450f745",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "467fa218",
+   "id": "e03ba1ee",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "bca4fbe1",
    "metadata": {
     "ExecuteTime": {
@@ -568,14 +568,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 27s, sys: 4.06 s, total: 3min 31s\n",
-      "Wall time: 1min 19s\n"
+      "CPU times: user 15min 9s, sys: 1min 6s, total: 16min 16s\n",
+      "Wall time: 6min 11s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "FastText(names[\"tokens\"], vector_size=128, window=5, min_count=5).save(\"fasttext_models/fasttext_128_cap_split.model\")"
+    "FastText(names[\"tokens\"], vector_size=128, window=5, min_count=5, epochs=20).save(\"fasttext_models/fasttext_128_cap_split_fitted.model\")"
    ]
   },
   {
